--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "test ",
   "main": "index.js",
-  "dependencies": {
-    "serve-static": "1.14.1"
+  "dependencies": {},
+  "devDependencies": {
+    "express": "4.17.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
